--- a/src/Makefile
+++ b/src/Makefile
@@ -1,18 +1,28 @@
-#compile flags 
 CC=gcc
-CFLAGS=-O3 -Wall
+CFLAGS=-O3 -Wall -fPIC
 LDFLAGS=
-LIBFLAGS=
+LIBFLAGS=-lpthread
 RM=rm -f
 
-#targets
-all:			textglass_client
+INCLUDES=tree.h queue.h tg_list.h tg_hashtable.h
+OBJS=tg_hashtable.o
 
-textglass_client:	main.o
-			$(CC) $(LDFLAGS) -o $@ main.o $(LIBFLAGS)
+.PHONY: clean lib
 
-%.o:			%.c
+all:			textglass_client lib
+lib:			libtextglass.so libtextglass.a
+
+textglass_client:	libtextglass.a main.o
+			$(CC) $(LDFLAGS) -o $@ main.o libtextglass.a $(LIBFLAGS)
+
+libtextglass.so:	$(OBJS)
+			$(CC) $(LDFLAGS) -shared -o $@ $(OBJS)
+
+libtextglass.a:		$(OBJS)
+			ar cr $@ $(OBJS)
+
+%.o:			%.c $(INCLUDES)
 			$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-			$(RM) *.o dclass_client
+			$(RM) *.o *.so *.a textglass_client
