--- a/servers/varnish/src/Makefile
+++ b/servers/varnish/src/Makefile
@@ -1,25 +1,24 @@
+#VARNISH_PREFIX=/usr
+VARNISH_PREFIX=/opt/varnish/varnish-4.1.0
+TEXTGLASS_PREFIX=../../../src
+
 CC=gcc
-CFLAGS=-O3 -Wall -g -fPIC -D_TEXTGLASS_SKIP_ASSERT
-LDFLAGS=
+CFLAGS=-O3 -Wall -g -fPIC
+TGFLAGS=$(CFLAGS) -D_TEXTGLASS_SKIP_ASSERT -I$(TEXTGLASS_PREFIX) -I$(TEXTGLASS_PREFIX)/data -I$(TEXTGLASS_PREFIX)/jsmn
+VCFLAGS=$(TGFLAGS) -I$(VARNISH_PREFIX)/include/varnish
+LDFLAGS=-shared
 LIBFLAGS=
+LIBTEXTGLASS=$(TEXTGLASS_PREFIX)/libtextglass.a
+VMODPY=$(VARNISH_PREFIX)/share/varnish/vmodtool.py
 PYTHON=python
 RM=rm -f
-
-TG_PREFIX=../../../src
-LIBTEXTGLASS=$(TG_PREFIX)/libtextglass.a
-CFLAGS+=-I$(TG_PREFIX) -I$(TG_PREFIX)/data -I$(TG_PREFIX)/jsmn
-
-#VPREFIX=/usr
-VPREFIX=/opt/varnish/varnish-4.1.0
-VCFLAGS=$(CFLAGS) -I$(VPREFIX)/include/varnish
-VMODPY=$(VPREFIX)/share/varnish/vmodtool.py
 
 .PHONY: clean all
 
 all:			libvmod_textglass.so
 
 libvmod_textglass.so:	vcc_if.o vmod_textglass.o $(LIBTEXTGLASS)
-			$(CC) $(LDFLAGS) -shared -o libvmod_textglass.so vcc_if.o vmod_textglass.o $(LIBTEXTGLASS) $(LIBFLAGS)
+			$(CC) $(LDFLAGS) -o libvmod_textglass.so vcc_if.o vmod_textglass.o $(LIBTEXTGLASS) $(LIBFLAGS)
 
 vcc_if.o:		vcc_if.c vcc_if.h
 			$(CC) $(VCFLAGS) -c vcc_if.c -o vcc_if.o
@@ -30,5 +29,7 @@ vmod_textglass.o:	vmod_textglass.c
 vcc_if.%:		vmod_textglass.vcc
 			$(PYTHON) $(VMODPY) vmod_textglass.vcc
 
+$(LIBTEXTGLASS):
+			$(MAKE) -C $(TEXTGLASS_PREFIX) libtextglass.a
 clean:
 			$(RM) *.o vcc_if.c vcc_if.h *.so *.rst
